--- a/egghead-tutorial/mixins.html
+++ b/egghead-tutorial/mixins.html
@@ -10,6 +10,22 @@
 	
 <script type="text/jsx">
 
+var ReactMixin = {
+	getInitialState: function() {
+		return {
+			count: 0 
+		};
+	},
+	componentWillMount: function() {
+		console.log('will mount!')
+	},
+	incrementCount: function() {
+		this.setState({
+			count: this.state.count+1 
+		});
+	}
+}
+
 var App = React.createClass({
 	render: function() {
 		return (
@@ -23,17 +39,22 @@ var App = React.createClass({
 });
 
 var Button = React.createClass({
+	mixins:[ReactMixin],
 	render: function() {
 		return (
-			<button>{this.props.txt}</button>
+			<button onClick={this.incrementCount}>{this.props.txt} - {this.state.count}</button>
 		);
 	}
 })
 
 var Label = React.createClass({
+	mixins:[ReactMixin],
+	componentWillMount: function() {
+		setInterval(this.incrementCount, 1000)
+	},
 	render: function() {
 		return (
-			<label>{this.props.txt}</label>
+			<label>{this.props.txt} - {this.state.count}</label>
 		);
 	}
 })
